Update issue 444 searchOption.style.position is changed into "absolute". (for IE's z-index bug)
git-svn-id: https://infoscoop.googlecode.com/svn/trunk@1322 d4e23b88-c782-11de-b6dc-25c59a28ecba

--- a/src/main/web/skin/searchengine.css
+++ b/src/main/web/skin/searchengine.css
@@ -64,7 +64,6 @@
 	width: 190px;
 	background-color:#fff;
 	position: absolute;
-	top: 24px;
 	left: 0px;
 	z-index: 80000;
 }
